// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The product naics code association component renders a list of naics codes and a helper message when no naics is selected 1`] = `
Array [
  <Row
    noGutters={false}
  >
    <div
      className="row"
    >
      <Col
        md="4"
      >
        <div
          className="col-md-4"
        >
          <Card
            body={false}
          >
            <div
              className="card"
            >
              <CardHeader
                className="bc-card-header"
              >
                <div
                  className="bc-card-header card-header"
                >
                  Select an Industry (NAICS) code:
                </div>
              </CardHeader>
              <ListGroup
                variant="flush"
              >
                <ForwardRef
                  as="div"
                  className="list-group list-group-flush"
                  onSelect={[Function]}
                >
                  <div
                    className="list-group list-group-flush"
                    onKeyDown={[Function]}
                  >
                    <ListGroupItem
                      active={false}
                      disabled={false}
                      onClick={[Function]}
                    >
                      <ForwardRef
                        as="div"
                        className="list-group-item"
                        disabled={false}
                        eventKey={null}
                        onClick={[Function]}
                      >
                        <div
                          className="list-group-item"
                          data-rb-event-key={null}
                          disabled={false}
                          onClick={[Function]}
                        >
                          <b>
                            123
                          </b>
                          <br />
                          <small>
                            test code
                          </small>
                        </div>
                      </ForwardRef>
                    </ListGroupItem>
                  </div>
                </ForwardRef>
              </ListGroup>
            </div>
          </Card>
        </div>
      </Col>
      <Col
        md="8"
      >
        <div
          className="col-md-8"
        >
          <Row
            noGutters={false}
          >
            <div
              className="row"
            >
              <Col>
                <div
                  className="col"
                >
                  Please select a NAICS code on the left to add allowable products
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Col>
    </div>
  </Row>,
  "",
]
`;

exports[`The product naics code association component renders the associated components when a naics is selected 1`] = `
Array [
  <Row
    noGutters={false}
  >
    <div
      className="row"
    >
      <Col
        md="4"
      >
        <div
          className="col-md-4"
        >
          <Card
            body={false}
          >
            <div
              className="card"
            >
              <CardHeader
                className="bc-card-header"
              >
                <div
                  className="bc-card-header card-header"
                >
                  Select an Industry (NAICS) code:
                </div>
              </CardHeader>
              <ListGroup
                variant="flush"
              >
                <ForwardRef
                  as="div"
                  className="list-group list-group-flush"
                  onSelect={[Function]}
                >
                  <div
                    className="list-group list-group-flush"
                    onKeyDown={[Function]}
                  >
                    <ListGroupItem
                      active={true}
                      disabled={false}
                      onClick={[Function]}
                    >
                      <ForwardRef
                        as="div"
                        className="list-group-item active"
                        disabled={false}
                        eventKey={null}
                        onClick={[Function]}
                      >
                        <div
                          className="list-group-item active"
                          data-rb-event-key={null}
                          disabled={false}
                          onClick={[Function]}
                        >
                          <b>
                            1234
                          </b>
                          <br />
                          <small>
                            test code
                          </small>
                        </div>
                      </ForwardRef>
                    </ListGroupItem>
                  </div>
                </ForwardRef>
              </ListGroup>
            </div>
          </Card>
        </div>
      </Col>
      <Col
        md="8"
      >
        <div
          className="col-md-8"
        />
      </Col>
    </div>
  </Row>,
  "",
]
`;
